fix the splash overflow issue.
2007-03-17  Jakub Steiner <jimmac@ximian.com>

  * style/wgo.css: fix the splash overflow issue.

svn path=/branches/v2.4/; revision=1464

--- a/style/wgo.css
+++ b/style/wgo.css
@@ -394,14 +394,9 @@ form {
 }
 
 .splash {
-  width: 620px;
   margin: -20px 0px 0px -20px;
   background-color: #555;
   height: 180px;
-  overflow: hidden;
-}
-
-.splash img {
   overflow: hidden;
 }
 
